Revision history for {{$dist->name}}

{{$NEXT}}

1.0.1     2011-01-13 08:03:19 Pacific/Auckland

        Fix the default version to be unpadded. Its useless with padding anyway -_-

        Now suggests @KENTNL 1.0.0 for Devel Suggests.

1.000.000 2011-01-09 23:15:06 Pacific/Auckland

        Switch to Git::NextVersion for good, use Gentoo Compatible
        version numbers.

0.01023312 2011-01-02 09:01:33 Pacific/Auckland

        Cleanup a few dependencies.

0.01023311 2011-01-02 08:31:37 Pacific/Auckland
        Replace internal loader code with Class::Load.

        Fix outstanding headache with my ini generator doing [Prereq] instead
        of [Prereqs]

        Added a Minting Profile.

          dzil new -P Author::KENTNL Some::Dist::Name

        Add git_versions = 1 flag to use Git::NextVersion 

        Drop portability tests because we now ship .perltidyrc in all dists

0.01017322 2010-11-04 19:56:23 Pacific/Auckland
        Ramp up BuiltWith dep.
        Ramp up MetaProvides dep.

0.01017122 2010-11-02 19:00:35 Pacific/Auckland
        Inject Develop Needs/Suggests/Recommends for @KENTNL

0.01017119 2010-11-02 16:50:49 Pacific/Auckland
        Replace AutoPreReq with AutoPreReqs
        Replace Prereq with PreReqs

0.01010423 2010-08-28 19:47:18 Pacific/Auckland
        Custom DistINI now injects [Bootstrap::lib] instead of [=inc::lib]
        Added Bootstrap::lib into DevelopRequires

0.01009310 2010-08-17 06:13:54 Pacific/Auckland
        Dep latest CriticTests.
        use upcomming Bootstrap::lib instead of this [=inc::lib] sillyness.
        Cleaned a lot of redundant files.

0.01008321 2010-08-07 17:56:23 Pacific/Auckland
        Dep latest Autoversion::Relative, solve Moose Deprecation problems.
        Tweak DistINI generator to stuff in default hash_tags for twitter.

0.01007922 2010-08-03 18:25:33 Pacific/Auckland
        Dep latest. Modifiy to use new BuiltWith features.

0.01007006 2010-07-25 02:40:46 Pacific/Auckland