@@ -1,4 +1,4 @@
-name    = Dist-Zilla-PluginBundle-KENTNL
+name    = Dist-Zilla-PluginBundle-Author-KENTNL
 author  = Kent Fredric <kentnl@cpan.org>
 license = Perl_5
 copyright_holder = Kent Fredric
