@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+        Moved to being @Author::KENTNL
+
 1.0.1     2011-01-13 08:03:19 Pacific/Auckland
 
         Fix the default version to be unpadded. Its useless with padding anyway -_-
